# aks-demos

./: README.md  aks-keyvault.sh
aks-kaito/: 1-setup-aks-kaito-v0.80.sh  2-setup-nginx-ingress-controller.sh  3-setup-kaito-rag.sh  4-deploy-gptoss-inference.sh  4-streamlitapp-demo.sh  5-deploy-phi-3-5-vision.sh  README.md  bge-small-ragengine.yaml  configure-helm-values.sh  gpu-provisioner-values.yaml  ingress-gptoss.yaml  ingress-nginx-kaito.yaml  ingress-ragengine.yaml  kaito_workspace_gpt_oss_20b.yaml  phi-3-5-vision-workspace.yaml  phi-4-mini-workspace.yaml  phi-4-workspace.yaml  pvc-ragengine-vector-db.yaml  setup-aks-kaito-deprecated.sh  test-kaitochatdemo.sh
aks-kaito/document-ingestion/: cra-tax-rules.txt  document-ingestion.py  ingest.sh  pyproject.toml
aks-kaito/ragengine-ingest-docs/: README.md  ingest.sh  pyproject.toml  ragengine-ingest-docs.py
aks-kaito/ragengine-ingest-docs/docs/: fantasia-citizen-laws.md  soc2-azure-networking-security-controls.md
aks-kaito/streamlit-chatbot/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  catalog.py  dev.sh  ingress-streamlit-chatbot.yaml  k8s-streamlit-chatbot.yaml  kaito_catalog.yaml  kaito_openai_compat.py  prompt_library.csv  prompt_library_store.py  pyproject.toml  ragengine_ingest_adapter.py  requirements.txt  sidebar_nav.py
aks-kaito/streamlit-chatbot/pages/: 1_Prompt_Library.py  2_Document_Ingestion.py
aks-keyvault/: README.md  aks-keyvault-secret-polling.sh  aks-keyvault.sh
